add style and begin dashboard layout design

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,9 @@
 .section-title {
-    padding: 30px;
+    padding: 20px;
+    font-weight: bold;
 }
 
 .section-title-bandwith h2 {
-    padding: 10px;
     font-weight: bold;
 }
 
