--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,58 +1,58 @@
 .section-title {
-    padding: 20px;
-    font-weight: bold;
+  padding: 20px;
+  font-weight: bold;
 }
 
 .section-title-bandwidth h2 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
-.bg-gray{
-    background-color: gray;
+.bg-gray {
+  background-color: gray;
 }
 
 .input-search {
-    padding-bottom: 10px;
-    margin-right: 0px;
-    text-align: right;
+  padding-bottom: 10px;
+  margin-right: 0px;
+  text-align: right;
 }
 
 .main-header {
-    color:  #6b6f72;
-    background: #6b6f72;
+  color: #6b6f72;
+  background: #6b6f72;
 }
 
 .integer-step {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .footer-sider {
-    position: absolute;
-    background-color: #001529;
-    padding-left: 10px;
-    bottom: 0px;
-    margin: 0px;
-    width: 100%;
+  position: absolute;
+  background-color: #001529;
+  padding-left: 10px;
+  bottom: 0px;
+  margin: 0px;
+  width: 100%;
 }
 
 .gridStyle {
-    width: '12.5%';
-    text-align: 'left';
-    height: 100
+  width: '12.5%';
+  text-align: 'left';
+  height: 100;
 }
 
 .page-test {
-    background-color: white;
+  background-color: white;
 }
 
 .user-bop {
-    padding: 30px 0px 30px 0px;
+  padding: 30px 0px 30px 0px;
 }
 
 .grafik-bop {
-    padding-top: 30px;
+  padding-top: 30px;
 }
 
-.grafik-traffic{
-    padding-top: 30px;
+.grafik-traffic {
+  padding-top: 30px;
 }
