--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,6 @@
+html{
+  line-break: anywhere;
+}
 .logo {
   background: url("https://placeimg.com/320/120/tech");
   width: 420px;
@@ -53,13 +56,22 @@
 
 .footer-sider {
   position: absolute;
-  background-color: #001529;
-  padding-left: 20px;
+  background-color: #1A3547;
   bottom: 0px;
-  padding-bottom: 20px;
   margin: 0px;
   width: 100%;
 }
+
+/* .footer-sider {
+  position: absolute;
+  background-color: #1A3547;
+  padding-left: 20px;
+  bottom: 0px;
+  width: 200px;
+  padding-bottom: 5px;
+  position: fixed;
+  margin: 0px;
+} */
 
 .gridStyle {
   width: '12.5%';
@@ -81,4 +93,21 @@
 
 .grafik-traffic {
   padding-top: 30px;
+}
+
+/*Layout */
+#components-layout-demo-custom-trigger .trigger {
+  padding: 0 24px;
+  font-size: 18px;
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+#components-layout-demo-custom-trigger .trigger:hover {
+  color: #1890ff;
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
 }
